# clinical-trial-lookup

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
data_sources/: __init__.py  aggregator.py  clinical_trials_gov.py  medlineplus.py  nci_trials.py
etl/: bulk_downloader.py  embedder.py  ontology.py  pipeline.py
eval/: agent_golden_set.jsonl  agent_harness.py  build_agent_golden_set.py  golden_set.jsonl  ground_agent_golden_set.py  guardrail_golden_set.jsonl  guardrail_harness.py  harness.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AgentPage.tsx  LoginScreen.tsx  MonitoringPage.tsx  ResultsMeta.tsx  SearchForm.tsx  TrialCard.tsx
infra/: cloudfront.tf  ec2.tf  main.tf  outputs.tf  scheduler.tf  terraform.tfvars.example  user_data.sh  variables.tf  vpc.tf
models/: __init__.py  finetune_pipeline.py  oss_finetune.py  screener.py
pipeline/: agentic.py  search.py
serving/: api.py  cache.py  guardrail.py  modal_endpoint.py
