[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "clinical-trial-search"
version = "1.0.0"
description = "AI-powered clinical trial eligibility screening with QLoRA BioMistral-7B"
requires-python = ">=3.11"
dependencies = [
    # API & serving
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    # Database
    "asyncpg>=0.29.0",
    "pgvector>=0.2.5",
    "sqlalchemy[asyncio]>=2.0.30",
    "redis>=5.0.4",
    # ML / NLP
    "openai>=1.30.0",
    "transformers>=4.41.0",
    "peft>=0.11.0",
    "bitsandbytes>=0.43.1",
    "accelerate>=0.30.0",
    "torch>=2.3.0",
    "trl>=0.8.6",
    "datasets>=2.19.0",
    "huggingface-hub>=0.23.0",
    "sentencepiece>=0.2.0",
    "scispacy>=0.5.4",
    # Observability
    "langsmith>=0.1.65",
    # Utilities
    "python-dotenv>=1.0.1",
    "tenacity>=8.3.0",
    "numpy>=1.26.4",
    "tqdm>=4.66.4",
]

[project.optional-dependencies]
modal = ["modal>=0.63.0"]
dev = ["pytest>=8.2.0", "pytest-asyncio>=0.23.0", "ruff>=0.4.0", "mypy>=1.10.0"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
